--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
     "@prisma/client": "6.9.0",
     "@prisma/extension-accelerate": "2.0.2",
     "@types/cors": "^2.8.19",
+    "@types/multer": "^2.0.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "5.1.0",
     "express-session": "^1.18.2",
+    "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
     "openai": "^6.3.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdf-parse": "^2.3.9",
     "zod": "^4.1.9"
   },
   "devDependencies": {
